# jvagent

./: --location  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUTHORS  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.base  MANIFEST.in  README.md  RELEASING.md  RESEARCH.md  SECURITY.md  cockpit_phaseA_smoke.py  pyproject.toml  requirements-all.txt  requirements-dev.txt  requirements.txt  setup.py  test_flow.py  test_google_oauth2.py
.ci/: check_doc_anchors.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: auto-tag.yaml  pre-commit.yaml  publish-pypi.yaml  release-docker.yaml  test-jvagent.yaml
.planning/: BRIDGE-EXECUTION-PROMPT.md  BRIDGE-ROADMAP.md  COCKPIT-ROADMAP.md  GLOSSARY.md  PATTERNS.md  PROJECT.md  README.md  SPEC.md  action-authoring.md  actions-catalog.md  architecture.md  configuration-keys.md  jvspatial-integration.md  memory-and-pruning.md  observability.md
.planning/adr/: 0001-graph-based-state.md  0002-walker-revisit-cockpit.md  0003-interaction-limit-pruning.md  0004-namespace-isolation.md  0005-app-yaml-agent-yaml-split.md  0006-jvspatial-dependency.md  0007-bridge-helm-architecture.md  0010-executive-centers-architecture.md  0011-skills-two-kinds.md  0012-skill-executive-architecture.md  0013-togglable-deterministic-turn-lock.md  0014-identity-on-agent-replyaction-egress.md  0015-skill-executive-configuration-surface.md  0016-model-gearing-light-heavy.md  0017-two-skill-specs-code-execution-substrate.md  0018-lean-tool-surfacing.md  0019-orchestrator-resumable-plan.md  0020-public-interact-endpoint-auth.md  0020-skill-sop-extends.md  0021-orchestrator-vision-reflex.md  0022-proactive-task-monitor.md  0023-skill-placement-standard.md  0024-single-per-turn-egress.md  0025-replyaction-single-output-contract.md  0026-task-driven-turn-lock.md  0027-conversation-use-case-spec.md  0028-defer-meta-whatsapp-groups.md  0028-rails-orchestration-deprecation.md  0029-rails-orchestration-removal.md  0030-rails-orchestration-deprecation.md  0031-skill-sop-extends.md  0032-interact-session-token-refresh.md  0033-identity-and-locking-substrate.md  0034-interview-abandonment-handling.md  0035-embeddable-chat-messenger.md  0035-orchestrator-config-surface-audit.md
.planning/archive/: EXECUTIVE-ROADMAP.md  executive-build-prompt.md
.planning/audit/: AUDIT-INDEX.md  AUDIT-actions.md  AUDIT-core.md  AUDIT-interact-cockpit.md  AUDIT-memory.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/plans/: 2026-06-13-interview-multi-response.md  2026-06-13-orchestrator-egress-streamline.md
.planning/reference/: action-authoring.md  action-modularization-audit.md  actions-catalog.md  configuration-keys.md  conversation-use-cases.md  integral-skill-profile.md  jvspatial-integration.md  memory-and-pruning.md  observability.md
.planning/reviews/: 2026-07-16-core-review.md  2026-07-17-once-over.md
.planning/runbooks/: add-action.md  livekit-whatsapp-calls.md  local-dev.md  whatsapp-voice-calls.md
.planning/specs/: 2026-06-13-interview-multi-response-design.md  2026-06-13-orchestrator-egress-streamline-design.md  2026-06-13-replyaction-sole-egress-design.md
REF/: IMPLEMENTATION_PLAN.md  README.md
docs/: BRIDGE.md  COCKPIT.md  EXECUTIVE.md  ORCHESTRATOR.md  agent-interact.md  configuration.md  database-indexing.md  deprecated-api-migration.md  environment-keys-reference.md  error-logging.md  integrations-environment.md  interaction-logging.md  jvchat.md  jvmessenger.md  language-models.md  logging.md  orchestration-modes.md  proactive-messages.md  scaffolding.md  security-review.md  task-tracking.md  thin-harness.md
examples/jvagent_app/: .env.example  .gitignore  CHANGELOG.md  README.md  SETUP.md  STRUCTURE.md  app.yaml
jvagent/: __init__.py  __main__.py  _logging_compat.py  _mimetypes_compat.py  cli.py  embed.py  env.py  stress_seed_graph.py  version.py
jvagent/action/: CLAUDE.md  README.md  __init__.py  action.py  action_loader.py  actions.py  base.py  endpoints.py  manifest.py  parameters.py  plugin_contracts.py  streaming.py
jvagent/bundle/: Dockerfile.base  README.md  __init__.py  bundler.py  dockerfile.py  dockerfile_generator.py  lambda_handler.py
jvagent/cli/: CLAUDE.md  __init__.py  __main__.py  agent_commands.py  app_commands.py  bootstrap.py  chat.py  commands.py  main.py  messenger.py  server.py  server_config.py  skill_commands.py  validate.py
jvagent/core/: CLAUDE.md  __init__.py  agent.py  agent_loader.py  agent_yaml_validator.py  agents.py  app.py  app_context.py  app_loader.py  app_yaml_validator.py  benchmark.py  bootstrap_logger.py  bootstrap_update_mode.py  cache.py  callback.py  channel.py  config.py  dependency_installer.py  distributed_lease.py  embed_endpoints.py  endpoints.py  env_resolver.py  errors.py  graph_repair.py  graph_repair_handlers.py  graph_repair_job.py  graph_traversal.py  index_bootstrap.py  lease_backend.py  (+11 more)
jvchat/: .eslintrc.cjs  README.md  config.yaml  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
jvmessenger/: .gitignore  app.html  index.html  package-lock.json  package.json  scratch-embed.html  tailwind.config.js  tsconfig.json  vite.app.config.ts  vite.loader.config.ts
pet-rocks-site/: app.js  index.html  style.css
scripts/: build_jvchat.py  build_jvmessenger.py
tests/: CLAUDE.md  __init__.py  _concurrency.py  conftest.py  test_branch_change_context_lifecycle.py  test_comprehensive_pruning.py  test_embed.py  test_embed_stream.py  test_env_keys_documented.py  test_env_load.py  test_framework_domain_agnostic.py  test_interview_branch_cache.py  test_interview_path_pruning_and_convergence.py  test_logging_compat.py  test_mimetypes_compat.py  test_pruning_fix.py  test_stress_seed_graph.py  test_stress_seed_integration.py  test_structured_branch_payloads.py  test_tool_schema_audit.py
workers/: __init__.py
(+2254 files in other folders)
