[build-system]
# setuptools >=62.6 — required for `**` glob recursion in
# [tool.setuptools.package-data] (used below to ship every action's
# `info.yaml`, every skill's `SKILL.md`, etc.).
requires = ["setuptools>=62.6", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jvagent"
dynamic = ["version"]
description = "A modular, pluggable agentive platform built on jvspatial"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "TrueSelph Inc.", email = "adminh@trueselph.com"},
]
keywords = ["agent", "ai", "llm", "agentive", "jvspatial", "graph"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "aiohttp>=3.9.0",
    # CI records the resolved jvspatial version after install (see .github/workflows/test-jvagent.yaml).
    "jvspatial>=0.0.9",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "pymupdf>=1.24.0",
    # MCP stdio client + jvspatial_fs_server (Python 3.10+); jvagent Python 3.8 uses MCP without mcp if unpinned
    "mcp>=1.0.0; python_version>='3.10'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "pre-commit>=3.0.0",
    "black>=23.9.0",
    "isort>=6.0.0",
    "flake8>=6.0.0",
    "pep8-naming",
    "flake8-docstrings",
    "flake8-comprehensions",
    "flake8-bugbear",
    "flake8-annotations",
    "flake8-simplify",
    "mypy>=1.6.0",
    "pytest-cov>=4.0.0",
    "coverage>=7.0.0",
    "detect-secrets>=1.5.0",
]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "pytest-cov>=4.0.0",
    "openai>=1.0.0",
    "filetype>=1.2.0",
    "tiktoken>=0.5.0",
    "litellm>=1.82.0",
    "PyPDF2>=3.0.1",
    "pypdf>=4.0.0",
    # PageIndex Docling tests (same stack as jvagent/action/pageindex/pageindex_action/info.yaml)
    "docling>=2.0.0",
    "tabulate>=0.9.0",
    # web_fetch tests (same stack as jvagent/action/web_fetch/info.yaml)
    "beautifulsoup4",
    "markdownify",
]

# Optional: cluster-wide conversation locks (Redis SET NX or DynamoDB).
distributed-lock = [
    "redis>=5.0.0",
    "boto3>=1.28.0",
]

# Optional: same Docling stack as jvagent/action/pageindex/pageindex_action/info.yaml (manual / pre-baked images).
pageindex = [
    "docling>=2.0.0",
    "tabulate>=0.9.0",
    "rapidocr>=3.3,<4",
]

[project.scripts]
jvagent = "jvagent.cli:main"

[project.urls]
Homepage = "https://github.com/TrueSelph/jvagent"
Repository = "https://github.com/TrueSelph/jvagent"
Issues = "https://github.com/TrueSelph/jvagent/issues"
Changelog = "https://github.com/TrueSelph/jvagent/blob/main/CHANGELOG.md"
Documentation = "https://github.com/TrueSelph/jvagent/blob/main/README.md"

[tool.setuptools]
# Mirror MANIFEST.in entries that fall inside packages into the wheel.
# Without this, non-editable installs (`pip install jvagent`) ship the
# Python code but drop every `info.yaml`, `SKILL.md`, and per-action
# requirements file — the action loader then cannot discover any core
# action and emits "Action jvagent/<x> not found locally or in core
# library" warnings on startup.
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["jvagent*"]

[tool.setuptools.dynamic]
version = {attr = "jvagent.version.__version__"}

[tool.setuptools.package-data]
# Belt-and-suspenders: even if MANIFEST.in drifts or include-package-data
# is disabled, these explicit globs guarantee the runtime data ships.
# `**` recursion requires setuptools >=62.6 (declared in build-system).
"jvagent" = [
    # Per-action descriptors + READMEs + per-action pip pins.
    "action/**/info.yaml",
    "action/**/*.yaml",
    "action/**/*.yml",
    "action/**/*.md",
    "action/**/requirements.txt",
    "action/**/*.json",
    # Claude-style skill bundles + their per-skill docs and pip pins.
    "skills/**/SKILL.md",
    "skills/**/*.md",
    "skills/**/*.yaml",
    "skills/**/*.yml",
    "skills/**/requirements.txt",
    # Scaffold templates (kept from the previous narrow rule).
    "scaffold/builtin_profiles/*.yaml",
    "scaffold/static/*.txt",
    "scaffold/**/*.yaml",
    "scaffold/**/*.txt",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "asyncio: mark test as an asyncio test",
]
filterwarnings = [
    "ignore::DeprecationWarning:pydantic.*",
    "ignore::PendingDeprecationWarning",
    "ignore::DeprecationWarning:starlette.*",
    "ignore:builtin type.*has no __module__:DeprecationWarning",
    "ignore:enable_cleanup_closed ignored:DeprecationWarning:aiohttp.*",
]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_any_generics = false
disallow_subclassing_any = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
check_untyped_defs = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = false
show_error_codes = true
exclude = ["examples/", "tests/"]

[[tool.mypy.overrides]]
module = [
    "jvagent.core.app_context",
    "jvagent.env",
]
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "httpx.*",
    "jinja2.*",
    "jvspatial.*",
    "tiktoken",
    "aiohttp.*",
    "filetype.*",
    "elevenlabs.*",
    "openai.*",
    "pymupdf.*",
    "pypdf.*",
    "yaml",
    "mcp.*",
    "typesense.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "jvagent.action.model.*",
    "jvagent.action.persona.*",
    "jvagent.action.whatsapp.*",
    "jvagent.action.stt_action.*",
    "jvagent.action.tts_action.*",
    "jvagent.action.pageindex.*",
    "jvagent.action.response.*",
    "jvagent.action.router.*",
    "jvagent.action.vectorstore.*",
    "jvagent.action.base",
    "jvagent.action.actions",
    "jvagent.action.loader.action_loader",
    "jvagent.action.endpoints",
    "jvagent.action.interact.*",
    "jvagent.action.retrieval.*",
    "jvagent.action.intro.*",
    "jvagent.action.mcp.*",
    "jvagent.core.*",
    "jvagent.memory.*",
    "jvagent.cli",
]
ignore_errors = true

[tool.coverage.run]
source = ["jvagent"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
